[gd_scene load_steps=9 format=3 uid="uid://djx8jf6sxq80q"]

[ext_resource type="Script" path="res://Scripts/items/FireBubble.gd" id="1_gvwbx"]
[ext_resource type="Texture2D" uid="uid://d1dblwyco47t2" path="res://Sprites/Items/Power Ups/Bubble 3.png" id="2_gxfv1"]
[ext_resource type="Texture2D" uid="uid://duuioriv77pc4" path="res://Sprites/Items/Power Ups/Bubble 2.png" id="3_nognu"]
[ext_resource type="Texture2D" uid="uid://bmptydi0l2peb" path="res://Sprites/Items/Power Ups/Bubble 1.png" id="4_lth24"]
[ext_resource type="Texture2D" uid="uid://wdkacomwlj10" path="res://Sprites/Items/Power Ups/Bubble 4.png" id="5_scqci"]
[ext_resource type="Texture2D" uid="uid://b18upulgl46wn" path="res://Sprites/Items/Power Ups/Bubble 5.png" id="6_w5rdx"]

[sub_resource type="SpriteFrames" id="SpriteFrames_g6grn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_nognu")
}, {
"duration": 1.0,
"texture": ExtResource("2_gxfv1")
}],
"loop": true,
"name": &"moving",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_lth24")
}, {
"duration": 1.0,
"texture": ExtResource("3_nognu")
}, {
"duration": 1.0,
"texture": ExtResource("2_gxfv1")
}, {
"duration": 1.0,
"texture": ExtResource("5_scqci")
}, {
"duration": 1.0,
"texture": ExtResource("6_w5rdx")
}],
"loop": false,
"name": &"popped",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ve852"]
radius = 4.0

[node name="FireBubble" type="Area2D" node_paths=PackedStringArray("anim")]
script = ExtResource("1_gvwbx")
anim = NodePath("AnimatedSprite2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_g6grn")
animation = &"moving"
autoplay = "moving"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ve852")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animation_finished"]
